--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Welcome page </title>
     <style type = "text/css">
     
-     {
+     body{
       background-image: url(https://www.google.com/search?q=asteroid+falling+gif+images&tbm=isch&source=iu&ictx=1&fir=sUNX-wEKZVCD4M%252C1HynWeWVfknp-M%252C_&vet=1&usg=AI4_-kQogkEmJ0F2SS8KxiWRg1OtE-kp_g&sa=X&ved=2ahUKEwjHyr-hsPvwAhVSJHIKHU03BYQQ9QF6BAgPEAE#imgrc=sUNX-wEKZVCD4M);
       background-repeat: no-repeat;
         }
