--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style type = "text/css">
     
      body{
-      background-image: url(http://gph.is/1ev0F8F);
+      background-image: url('asteroids.gif');
       background-repeat: no-repeat;
         }
   </style>
