--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <title> Welcome page </title>
     <style type = "text/css">
     
-     body{
-      background-image: url('asteroids.gif');
-      background-repeat: no-repeat;
-        }
+     body, html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
+  background-image: url("asteroids.gif");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
   </style>
   </head>
   <body>
