--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
   <head>
     <title> Welcome page </title>
     <style type = "text/css">
-    
-     body, html {
-  height: 100%;
-}
-
-.bg {
-  /* The image used */
+   
   background-image: url("asteroids.gif");
+  background-mage : "full"
 
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
   </style>
   </head>
   <body>
