--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title> Welcome page </title>
     <style type = "text/css">
    
-  background-image: url("asteroids.gif");
-  background-mage : "full"
+  body {background-image: url("asteroids.gif");
+    background-image : "full"}
 
   </style>
   </head>
