--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <title> Welcome page </title>
     <style type = "text/css">
    
-  body {background-image: url("asteroids.gif");
-    background-image : "full"}
+      body {background-image: url("asteroids.gif"); background-size : 100%
+    }
 
   </style>
   </head>
   <body>
     Welcome to this website. In this entire course I will show you two python codes. So stay tuned
-    
+    <p></p>
+    <p></p>
+    <p></p>
     <p> Created by Rounding Explorer </p>
     </body>
 </html>
