--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> Welcome page </title>
     <style type = "text/css">
    
-      body {background-image: url("asteroids.gif"); background-size : 100%
+      body {background-image: url("asteroids.gif"); background-size : cover
     }
 
   </style>
