--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
   </head>
   <body>
-    Welcome to this website. In this entire course I will show you two python codes. So stay tuned
+    <h1><p style="color:purple">Welcome to this website. In this entire course I will show you two python codes. So stay tuned</p></h1>
     <p></p>
     <p></p>
     <p></p>
