--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </style>
   </head>
   <body>
-    <h1><p style="color:purple">Welcome to this website. In this entire course I will show you two python codes. So stay tuned</p></h1>
+    <h1 style = "color:red"> What is this website all about?</hi>
+    <p style="color:purple">Welcome to this website. In this entire course I will show you two python codes. So stay tuned</p>
     <p></p>
     <p></p>
     <p></p>
