--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p></p>
     <p></p>
     <p></p>
-    <h5><p style="color:purple"Created by Rounding Explorer </p></h5>
+    <h2>><p style="color:purple"Created by <a href ="https://github.com/RoundingExplorer"> Rounding Explorer </a></p></h2>
     </body>
 </html>
