--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1 style = "color:red"> What is this website all about?</hi>
     <p style="color:purple">Welcome to this website. In this entire course I will show you two python codes. So stay tuned</p>
     
-    <h2>><p style="color:purple"Created by <a href ="https://github.com/RoundingExplorer"> Rounding Explorer </h2></p></a>
+    ><p style="color:purple"Created by <a href="https://github.com/RoundingExplorer"> Rounding Explorer</a></p>
     </body>
 </html>
